# bedrock-batch-inference-bridge

./: .env.example  README.md  main.py  pyproject.toml  test_batch_inference.py  test_integration.py  test_tool_call.py
.claude/: settings.local.json
batch_inference/: __init__.py  client.py  exceptions.py  models.py  queue.py  s3.py  scheduler.py  submitter.py
